tex: Minor edits

--- a/tex/RSS2017_CameraReady.tex
+++ b/tex/RSS2017_CameraReady.tex
@@ -533,9 +533,9 @@ Where convenient, we will convert freely between twists and their
 equivalent formulation, rotation centers. The mappings
 \begin{align}
   [v_x, v_y, \omega] &\rightarrow [-\frac{v_y}{\omega}, \frac{v_x}{\omega}, \omega] \\
-  [r_x, r_y, \varphi] &\rightarrow [r_y\varphi, -r_x\varphi, \varphi]
+  [r_x, r_y, \omega] &\rightarrow [r_y\omega, -r_x\omega, \omega]
 \end{align}
-maps a twist at the origin to a rotation center and angular velocity
+map a twist at the origin to a rotation center and angular velocity
 about that rotation center and vice versa.
 
 % \EH{Define conversion between twist and rotation center.}
