tex: Add Acknowledgments

--- a/tex/RSS2017_CameraReady.tex
+++ b/tex/RSS2017_CameraReady.tex
@@ -1665,6 +1665,16 @@ converges to the final pose. We validate our planner on a real robotic
 system and show that the generated trajectories obtain low errors on
 the final pose of the object.
 
+\section*{Acknowledgments}
+
+Eric Huang was supported by the Department of Defense (DoD) through
+the National Defense Science \& Engineering Graduate Fellowship
+(NDSEG) Program. This material is based upon work supported by the
+National Science Foundation under Grants No. IIS1409003 and
+IIS1637908. Any opinions, findings, and conclusions or recommendations
+expressed in this material are those of the author(s) and do not
+necessarily reflect the views of the National Science Foundation.
+
 \bibliographystyle{plainnat}
 \bibliography{references}
 
