tex: Add RSS Poster

--- a/tex/RSS2017_PressPull_slides.tex
+++ b/tex/RSS2017_PressPull_slides.tex
@@ -677,18 +677,18 @@ cross/.default={2pt}}
   \end{columns}
 \end{frame}
 
-\begin{frame}{Real World Pulling}
-  \centering
-  \includemedia[
-  activate=onclick,
-  width=0.75\textwidth,
-  addresource=rss2017.mp4,
-  flashvars={%
-    source=rss2017.mp4% same path as in addresource!
-    % &autoPlay=true%    % optional configuration
-    % &loop=true%        % variables
-  }]{Pulling example on real system}{VPlayer.swf}
-\end{frame}
+% \begin{frame}{Real World Pulling}
+%   \centering
+%   \includemedia[
+%   activate=onclick,
+%   width=0.75\textwidth,
+%   addresource=rss2017.mp4,
+%   flashvars={%
+%     source=rss2017.mp4% same path as in addresource!
+%     % &autoPlay=true%    % optional configuration
+%     % &loop=true%        % variables
+%   }]{Pulling example on real system}{VPlayer.swf}
+% \end{frame}
 
 \begin{frame}[standout]
   Questions?
