tex: Minor changes

--- a/tex/RSS2017_Poster.tex
+++ b/tex/RSS2017_Poster.tex
@@ -307,8 +307,8 @@
 } \headerbox{Future
   work}{name=fw,column=2,below=exp}{
   \begin{itemize}
-  \item Apply the exact bounds to real-world robotics problems such as
-    NAMO, tabletop rearrangement planning.
+  \item Apply the exact bounds/planner to real-world robotics problems such as
+    NAMO, tabletop rearrangement.
   \end{itemize}
 } \headerbox{Conclusion}{name=con,column=2,below=fw}{
 
