tex: Add GT logo

--- a/tex/RSS2017_Workshop.tex
+++ b/tex/RSS2017_Workshop.tex
@@ -131,7 +131,7 @@
 %	TITLE SECTION 
 %----------------------------------------------------------------------------------------
 %
-{\includegraphics[height=6em]{images/mlab_logo.png}} % Second university/lab logo on the right
+{\includegraphics[height=6em]{images/gt_logo.png}} % Second university/lab logo on the right
 {\Huge\textbf{Exact Bounds on the Contact Driven \\Motion of a Sliding
     Object,\\\vspace{1mm} With Applications to Robotic Pulling}
   \vspace{3mm}} % Poster title
